# swagger/openapi2.yaml
@@ -4,10 +4,10 @@ info:
   description: "ポートフォリオを共有、評価できるサイトです"
   version: 1.0.0
 schemes:
-  - https
-produces:
-  - application/json
+  - http
 consumes:
+  - application/json
+produces:
   - application/json
 host: "localhost:1991"
 basePath: /v1
